<resources>
    <string name="app_name">EngContext</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="search_bar_fragment_label">Search Bar Fragment</string>
    <string name="serp_fragment_label">Serp Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_bar_hint">Search word usage</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="sign_in_fragment_label">Sign In Fragment</string>
    <string name="register_fragment_label">Register Fragment</string>

</resources>