<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:fontFamily="@font/poppins"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:autofillHints="name"
            android:fontFamily="@font/poppins"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:layout_below="@id/et_last_name"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/poppins"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:autofillHints="password"
            android:fontFamily="@font/poppins"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginStart="@dimen/standard_padding"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="@dimen/standard_padding"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="#66328E"
            android:fontFamily="@font/poppins"
            android:text="@string/create_act"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>